# SEC-Analyzer-CLI

./: .env.example  .gitignore  CACHING_FEATURES.md  DEPLOYMENT.md  QUICKSTART.md  README.md  REAL_ANALYSIS_GUIDE.md  SEC_DATA_ACCESS.md  TESTING_GUIDE.md  cache_demo.py  debug_analysis.py  pyproject.toml  test_bedrock.py
src/frb_sec_analyzer/: __init__.py  cache_manager.py  cli.py  report_generator.py  risk_analyzer.py  sec_client.py
src/sec_analyzer/: config.py
